--- a/app.json
+++ b/app.json
@@ -23,6 +23,10 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+    "package": "unisierra.covid",
+    "versionCode": 1
     }
   }
 }
